Corrected newsletter alignment

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -44,8 +44,12 @@ button {
   width: 100%;
   margin: 20px 0 20px 0;
 }
-.newsletter {
+.newsletter label {
   display: inline;
+}
+.newsletter input {
+  width: 10px;
+  display: inline-block;
 }
 .copyright {
   text-align: center;
